--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "clean": "rimraf build && mkdir build",
-    "dev": "npm run clean && babel ./src --watch --out-file ./build/index.js",
-    "build": "npm run clean && babel ./src --out-file ./build/index.js",
+    "dev": "webpack-dev-server --content-base build/ --progress --colors",
+    "build": "npm run clean && webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +21,19 @@
   "homepage": "https://github.com/tylerbuchea/entropy-site#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "rimraf": "^2.6.1"
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.1",
+    "webpack-dev-server": "^2.7.1"
   }
 }
