--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "clean": "rimraf build && mkdir build",
-    "dev": "webpack-dev-server --content-base build/ --progress --colors",
     "build": "npm run clean && webpack -p",
+    "start": "npm run build && webpack-dev-server --content-base build/ --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
