--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "app.js",
   "scripts": {
     "clean": "rimraf build && mkdir build",
-    "copy-stuff": "cp src/CNAME build && cp src/favicon.ico build",
+    "copy-stuff":
+      "cp src/200.html build && cp src/CNAME build && cp src/favicon.ico build",
     "build": "npm run clean && webpack -p && npm run copy-stuff",
     "start":
-      "npm run build && webpack-dev-server --content-base build/ --progress --colors",
+      "npm run build && webpack-dev-server  --history-api-fallback --content-base build/ --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
